@@ -59,8 +59,9 @@ public:
 	int get_end_time() const;
 
 	int time_to_tick(int animation_time) const;
+	int tick_to_time(int animation_tick) const;
 
-	void update_last_draw_time();
+	void update_last_draw_time(double acceleration = 0);
 	bool need_update() const;
 
 	bool cycles() const {return cycles_;};
